@@ -2,16 +2,19 @@ package org.iglooproject.basicapp.web.application.notification.service;
 
 import java.time.Instant;
 import java.util.Date;
+import java.util.List;
+import java.util.Locale;
 
 import org.apache.wicket.Component;
+import org.apache.wicket.Page;
 import org.apache.wicket.model.IModel;
 import org.apache.wicket.model.Model;
 import org.iglooproject.basicapp.core.business.notification.service.IBasicApplicationNotificationContentDescriptorFactory;
 import org.iglooproject.basicapp.core.business.user.model.User;
 import org.iglooproject.basicapp.core.util.ResourceKeyGenerator;
 import org.iglooproject.basicapp.core.util.binding.Bindings;
-import org.iglooproject.basicapp.web.application.notification.component.ExampleHtmlNotificationPanel;
-import org.iglooproject.basicapp.web.application.notification.component.UserPasswordRecoveryRequestHtmlNotificationPanel;
+import org.iglooproject.basicapp.web.application.notification.page.ExampleHtmlNotificationPage;
+import org.iglooproject.basicapp.web.application.notification.page.UserPasswordRecoveryRequestHtmlNotificationPage;
 import org.iglooproject.basicapp.web.application.security.password.page.SecurityPasswordCreationPage;
 import org.iglooproject.basicapp.web.application.security.password.page.SecurityPasswordResetPage;
 import org.iglooproject.spring.notification.model.INotificationContentDescriptor;
@@ -21,8 +24,6 @@ import org.iglooproject.wicket.more.model.GenericEntityModel;
 import org.iglooproject.wicket.more.notification.service.AbstractNotificationContentDescriptorFactory;
 import org.iglooproject.wicket.more.notification.service.IWicketContextProvider;
 import org.springframework.beans.factory.annotation.Autowired;
-
-import com.google.common.collect.ImmutableList;
 
 import igloo.wicket.model.BindingModel;
 
@@ -36,30 +37,31 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 	}
 
 	@Override
-	public INotificationContentDescriptor example(final User user, final Instant date) {
+	public INotificationContentDescriptor example(User user, Instant instant) {
 		return new AbstractSimpleWicketNotificationDescriptor("notification.panel.example") {
 			@Override
 			public Object getSubjectParameter() {
-				return user;
+				return GenericEntityModel.of(user);
 			}
 			@Override
 			public Iterable<?> getSubjectPositionalParameters() {
-				return ImmutableList.of(user.getFullName(), Date.from(date));
+				return List.of(Date.from(instant));
 			}
 			@Override
-			public Component createComponent(String wicketId) {
-				return new ExampleHtmlNotificationPanel(wicketId, GenericEntityModel.of(user), Model.of(date));
+			public Page createPage(Locale locale) {
+				return new ExampleHtmlNotificationPage(GenericEntityModel.of(user), Model.of(instant), Model.of(locale));
 			}
 			@Override
 			public Class<? extends Component> getComponentClass() {
-				return ExampleHtmlNotificationPanel.class;
+				return ExampleHtmlNotificationPage.class;
 			}
 		};
 	}
 
 	@Override
-	public INotificationContentDescriptor userPasswordRecoveryRequest(final User user) {
-		final ITwoParameterLinkDescriptorMapper<? extends IPageLinkGenerator, User, String> mapper;
+	public INotificationContentDescriptor userPasswordRecoveryRequest(User user, Instant instant) {
+		ITwoParameterLinkDescriptorMapper<? extends IPageLinkGenerator, User, String> mapper;
+		
 		switch (user.getPasswordRecoveryRequest().getType()) {
 		case CREATION:
 			mapper = SecurityPasswordCreationPage.MAPPER;
@@ -71,29 +73,30 @@ public class BasicApplicationNotificationContentDescriptorFactoryImpl
 			throw new IllegalStateException("Recovery request type unknown.");
 		}
 		
-		final ResourceKeyGenerator keyGenerator =
-			ResourceKeyGenerator.of("notification.panel.user.password.recovery.request")
-				.append(user.getPasswordRecoveryRequest().getType().name())
-				.append(user.getPasswordRecoveryRequest().getInitiator().name());
+		ResourceKeyGenerator keyGenerator = ResourceKeyGenerator.of("notification.panel.user.password.recovery.request")
+			.append(user.getPasswordRecoveryRequest().getType().name())
+			.append(user.getPasswordRecoveryRequest().getInitiator().name());
 		
 		return new AbstractSimpleWicketNotificationDescriptor(keyGenerator.resourceKey()) {
 			@Override
-			public IModel<?> getSubjectParameter() {
+			public Object getSubjectParameter() {
 				return GenericEntityModel.of(user);
 			}
 			@Override
-			public Component createComponent(String wicketId) {
+			public Page createPage(Locale locale) {
 				IModel<User> userModel = GenericEntityModel.of(user);
-				return new UserPasswordRecoveryRequestHtmlNotificationPanel<>(
-					wicketId,
+				return new UserPasswordRecoveryRequestHtmlNotificationPage<>(
 					keyGenerator,
-					userModel, userModel, Model.of(Instant.now()),
-					mapper.map(userModel, BindingModel.of(userModel, Bindings.user().passwordRecoveryRequest().token()))
+					userModel,
+					userModel,
+					Model.of(instant),
+					mapper.map(userModel, BindingModel.of(userModel, Bindings.user().passwordRecoveryRequest().token())),
+					Model.of(locale)
 				);
 			}
 			@Override
 			public Class<? extends Component> getComponentClass() {
-				return UserPasswordRecoveryRequestHtmlNotificationPanel.class;
+				return UserPasswordRecoveryRequestHtmlNotificationPage.class;
 			}
 		};
 	}
